--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,14 @@ html {
 /* COLORES */ /* DISPLAY */
 /* FLEX DIRECTION */
 /* JUSTIFY CONTENT */
-/* ALIGN ITEMS */
 /* TEXTOS */
+/* FONT-SIZE */
 /* MARGIN Y PADDING */
+/* MARGIN */
+/* PADDING */
 /* WIDTH Y HEIGHT */
+/* WIDTH */
+/* HEIGHT */
 /* POSITIONS */
 /* LISTAS */
 .header {
@@ -174,7 +178,8 @@ html {
   cursor: pointer;
 }
 .nav__log--login--button:hover {
-  background-color: rgb(145, 136, 104);
+  background-color: rgb(55, 106, 109);
+  border-color: rgb(255, 251, 252);
 }
 .nav__log--login--button:hover span {
   font-weight: 800;
@@ -211,24 +216,24 @@ html {
   margin: 4px;
   padding: 0;
 }
-.nav__text__ul {
+.nav__text--ul {
   list-style: none;
 }
-.nav__text__ul--subpages-text-only {
+.nav__text--ul--subpages-text-only {
   width: 100%;
   height: auto;
   margin: 0;
   padding: 7px;
   text-decoration: none;
 }
-.nav__text__ul--subpages-text-only:hover a {
+.nav__text--ul--subpages-text-only:hover a {
   font-size: 6vw;
   font-weight: 800;
   color: rgb(55, 106, 109);
   text-decoration: none;
   transform: scale(1.04);
 }
-.nav__text__ul--subpages-text-only a {
+.nav__text--ul--subpages-text-only a {
   font-size: 6vw;
   font-weight: 700;
   color: rgb(255, 251, 252);
@@ -252,12 +257,14 @@ html {
   display: none;
 }
 
+#footer-nav {
+  background-color: rgb(73, 73, 73);
+}
+
 .footer {
   width: 100%;
   height: auto;
   justify-content: center;
-  align-items: center;
-  margin: 0;
   padding: 20px 0 10px 0;
   display: flex;
   flex-wrap: wrap;
@@ -267,7 +274,6 @@ html {
 .footer__main-text {
   width: 100%;
   height: auto;
-  margin: 0;
   padding: 10px;
   color: rgb(255, 251, 252);
 }
@@ -275,28 +281,23 @@ html {
   font-size: 11vw;
   font-weight: 700;
   color: rgb(255, 251, 252);
-  margin: 0;
   padding: 10px;
 }
 .footer__content {
   width: 100%;
   height: auto;
   justify-content: center;
-  align-items: center;
+  align-content: center;
   display: flex;
   flex-wrap: wrap;
 }
 .footer__content--contact-items {
-  width: 100%;
   height: auto;
   justify-content: center;
-  align-items: center;
   margin: 20px;
-  padding: 0;
   display: flex;
 }
 .footer__content--contact-items--ul {
-  width: auto;
   height: auto;
   justify-content: center;
   display: flex;
@@ -307,7 +308,6 @@ html {
   height: auto;
   justify-content: start;
   align-items: center;
-  margin: 0;
   padding: 10px;
   display: flex;
   flex-direction: row;
@@ -317,23 +317,19 @@ html {
   width: 11vw;
   height: auto;
   margin: 0 20px 0 0;
-  padding: 0;
   color: rgb(255, 251, 252);
 }
 .footer__content--contact-items--ul--li h5 {
   font-size: 4.5vw;
   font-weight: 400;
   color: rgb(255, 251, 252);
-  margin-right: 10px;
+  margin: 0 10px 0 0;
 }
 .footer__form {
-  width: 100%;
   height: auto;
-  justify-content: center;
   align-items: center;
   text-align: center;
   margin: 20px;
-  padding: 0;
   display: flex;
   flex-direction: column;
 }
@@ -351,7 +347,6 @@ html {
 }
 .footer input[type=text], .footer input[type=email], .footer textarea {
   width: 100%;
-  height: auto;
   margin: 5px;
   padding: 10px;
   font-size: 5vw;
@@ -359,7 +354,6 @@ html {
   border-radius: 5px;
 }
 .footer textarea {
-  width: 100%;
   height: 15vh;
   resize: none;
 }
@@ -380,7 +374,6 @@ html {
   background-color: rgb(42, 82, 84);
 }
 .footer__map {
-  width: auto;
   height: auto;
   padding: 10px;
 }
@@ -391,7 +384,6 @@ html {
 }
 .footer__redes {
   width: 100%;
-  height: auto;
   margin: 20px;
   display: flex;
 }
@@ -400,10 +392,10 @@ html {
   justify-content: space-around;
   align-items: center;
   display: flex;
+  list-style: none;
 }
 .footer__redes--ul--li {
   justify-content: space-between;
-  margin: 0;
   padding: 10px;
   display: flex;
   flex-direction: row;
@@ -415,10 +407,8 @@ html {
 }
 .footer__desc {
   width: 100%;
-  height: auto;
   justify-content: center;
   align-items: center;
-  margin: 0;
   padding: 10px;
   display: flex;
   border-top: 1px solid rgb(172, 172, 172);
@@ -428,7 +418,6 @@ html {
   font-weight: 500;
   color: rgb(255, 251, 252);
   margin: 0;
-  padding: 0;
 }
 
 .page-main-text {
@@ -499,7 +488,7 @@ html {
   z-index: 15000;
 }
 .section-1-index__text {
-  font-size: 10vw;
+  font-size: 5vw;
   font-weight: 600;
   color: rgb(55, 106, 109);
   margin: 15px 0 10px 0;
@@ -515,7 +504,7 @@ html {
   z-index: 500;
 }
 .section-1-index__article-1--figure {
-  width: auto;
+  width: 80%;
   height: auto;
   justify-content: center;
   align-items: center;
@@ -642,6 +631,382 @@ html {
   font-size: 5vw;
   font-weight: 400;
   color: rgb(114, 114, 114);
+}
+
+/* BREAKPOINT-SM = START*/
+@media (min-width: 576px) {
+  /* ALL-PAGES = START */
+  .header__first--nav-sup--lupa-1 {
+    width: 8vw;
+    height: auto;
+  }
+  .header__first--nav-sup--list {
+    width: 10vw;
+    height: auto;
+  }
+  .header__first--logo--mini {
+    width: 8vw;
+    height: auto;
+  }
+  .nav__log {
+    justify-content: center;
+  }
+  .nav__log--login--button--img1, .nav__log--login--button--img1--2 {
+    width: 11vw;
+    height: auto;
+  }
+  .nav__log--login--button--span1 {
+    font-size: 5vw;
+  }
+  .nav__ul {
+    flex-direction: row;
+  }
+  .nav__ul--li {
+    width: 100%;
+    height: auto;
+    padding: 20px 30px;
+  }
+  .nav__ul--li--svg {
+    width: 10vw;
+    height: auto;
+  }
+  .nav__text--ul--subpages-text-only a {
+    font-size: 4.5vw;
+  }
+  input[type=text], input input[type=email], input textarea {
+    font-size: 5vw;
+  }
+  input[type=submit] {
+    font-size: 5vw;
+  }
+  /* ALL-PAGES = END */
+  /* ----------------INDEX=START----------------- */
+  .main-index__text h1 {
+    font-size: 11vw;
+  }
+  .section-1-index__tex {
+    font-size: 9.5vw;
+  }
+  .section-1-index__article-1--figure--figcap {
+    font-size: 5.5vw;
+  }
+  .section-1-index div a {
+    font-size: 5.5vw;
+  }
+  /* ----------------INDEX=END----------------- */
+  /* ----------------NOSOTROS=START----------------- */
+  .page-main-text {
+    font-size: 11vw;
+  }
+  /* ----------------NOSOTROS=END----------------- */
+}
+/* BREAKPOINT-SM = END */
+/* BREAKPOINT-MD = START */
+@media (min-width: 768px) {
+  /* ALL-PAGES = START */
+  .header__first--logo--mini {
+    display: none;
+  }
+  .header__first--logo--full {
+    display: flex;
+    width: 27vw;
+  }
+  .header__first--nav-sup--lupa-1 {
+    width: 7vw;
+  }
+  .header__first--nav-sup--list {
+    width: 9vw;
+  }
+  .nav__log {
+    margin: 10px;
+  }
+  .nav__log--login--button--img1, .nav__log--login--button--img1--2 {
+    width: 9vw;
+  }
+  .nav__log--login--button--span1 {
+    font-size: 4vw;
+    padding: 0 6px 0 0;
+  }
+  .nav__ul {
+    flex-direction: column;
+  }
+  .nav__ul--li {
+    margin: 10px;
+    padding: 0;
+  }
+  .nav__ul--li--svg {
+    width: 9vw;
+  }
+  .nav__ul--li a {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+  }
+  .nav__ul--li--subpages {
+    display: flex;
+    margin: 10px;
+    color: rgb(255, 251, 252);
+  }
+  .nav__text--ul--subpages-text-only a {
+    font-size: 4vw;
+  }
+  .footer__main-text h3 {
+    font-size: 9.5vw;
+  }
+  .footer__content--contact-items--ul--li svg {
+    width: 9vw;
+  }
+  .footer__content--contact-items--ul--li h5 {
+    font-size: 3.5vw;
+  }
+  .footer__redes--ul--li a svg {
+    width: 9vw;
+  }
+  input[type=text], input input[type=email], input textarea {
+    font-size: 3.5vw;
+  }
+  input[type=submit] {
+    font-size: 4vw;
+  }
+  /* ALL-PAGES = END */
+  /* ----------------INDEX=START----------------- */
+  .main-index__text h1 {
+    font-size: 9.5vw;
+  }
+  .section-1-index__text {
+    font-size: 8vw;
+  }
+  .section-1-index__article-1--figure--figcap {
+    font-size: 4.5vw;
+  }
+  /* ----------------INDEX=END----------------- */
+  /* ----------------NOSOTROS=START----------------- */
+  .page-main-text {
+    font-size: 10vw;
+  }
+  .main-nosotros__section--article--image {
+    width: 85%;
+  }
+  .main-nosotros__founders {
+    width: 100%;
+    flex-direction: row;
+  }
+  .main-nosotros__founders--div {
+    width: 33%;
+  }
+  .main-nosotros__founders--div--img {
+    width: 100%;
+  }
+  .main-nosotros__founders--div--name {
+    font-size: 4.5vw;
+  }
+  .main-nosotros__founders--div--position {
+    font-size: 3vw;
+  }
+  /* ----------------NOSOTROS=END----------------- */
+}
+/* BREAKPOINT-MD = START */
+/* BREAKPOINT-LG = START*/
+@media (min-width: 992px) {
+  /* ALL-PAGES = START */
+  .header {
+    display: flex;
+    flex-direction: column;
+  }
+  .header__first {
+    display: flex;
+    flex-direction: row;
+  }
+  .header__first--logo--full {
+    width: 130px;
+  }
+  .header__first--nav-sup {
+    display: none;
+  }
+  .header__desktop-subpages {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-color: rgb(255, 251, 252);
+  }
+  .header__desktop-subpages__ul {
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+  }
+  .header__desktop-subpages__ul--li {
+    width: 100%;
+    padding: 3px;
+    text-align: center;
+  }
+  .header__desktop-subpages__ul--li:hover {
+    padding: 0;
+    background-color: rgb(193, 193, 193);
+  }
+  .header__desktop-subpages__ul--li:hover a {
+    font-size: 18px;
+  }
+  .header__desktop-subpages__ul--li a {
+    display: block;
+    font-size: 16px;
+    font-weight: 500;
+    color: rgb(73, 73, 73);
+    text-decoration: none;
+  }
+  .nav {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: end;
+  }
+  .nav__log {
+    width: auto;
+    justify-content: end;
+    display: flex;
+    flex-direction: row;
+  }
+  .nav__log--login--button--img1, .nav__log--login--button--img1--2 {
+    width: 30px;
+  }
+  .nav__log--login--button--span1 {
+    font-size: 15px;
+    font-weight: 400;
+    color: rgb(255, 251, 252);
+    padding: 0 6px 0 0;
+  }
+  .nav__ul {
+    width: auto;
+    padding: 0;
+    display: flex;
+  }
+  .nav__ul--li {
+    width: auto;
+    margin: 0;
+    padding: 0;
+    background-color: rgba(255, 255, 255, 0);
+  }
+  .nav__ul--li:hover {
+    background-color: rgba(255, 255, 255, 0);
+  }
+  .nav__ul--li--svg {
+    width: 30px;
+  }
+  .nav__ul--li--svg path {
+    color: rgb(255, 251, 252);
+  }
+  .nav__ul--li:hover path {
+    color: rgb(55, 106, 109);
+    transform: scale(1.03);
+  }
+  .nav__ul--li a {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+  }
+  .nav__ul--li--subpages {
+    display: none;
+  }
+  .nav__text {
+    display: none;
+  }
+  .navbar-expand-lg .navbar-nav {
+    flex-direction: row-reverse;
+  }
+  #ProductosItem {
+    display: none;
+  }
+  #BusquedaNav {
+    display: flex;
+  }
+  #footer-nav {
+    width: 100%;
+    height: 50px;
+    background-color: rgb(73, 73, 73);
+  }
+  .footer__main-text h3 {
+    font-size: 70px;
+  }
+  .footer__content--contact-items {
+    justify-content: start;
+    align-items: center;
+  }
+  .footer__content--contact-items--ul--li svg {
+    width: 45px;
+  }
+  .footer__content--contact-items--ul--li h5 {
+    font-size: 20px;
+  }
+  .footer__form {
+    justify-content: center;
+    align-content: start;
+  }
+  .footer__form h4 {
+    font-size: 30px;
+  }
+  .footer__redes {
+    margin: 20px;
+    display: flex;
+  }
+  .footer__redes--ul {
+    justify-content: space-evenly;
+  }
+  .footer__redes--ul--li a svg {
+    width: 70px;
+  }
+  .footer__desc h6 {
+    font-size: 12px;
+  }
+  .footer input[type=text], .footer input[type=email], .footer textarea {
+    font-size: 19px;
+  }
+  .footer input[type=submit] {
+    font-size: 22px;
+  }
+  /* ALL-PAGES = END */
+  /* ----------------INDEX=STAR----------------- */
+  .main-index__text h1 {
+    font-size: 5.5vw;
+    font-weight: 800;
+    color: rgb(255, 251, 252);
+  }
+  #ProDest {
+    width: 100%;
+    height: 80px;
+    background-color: rgb(225, 225, 225);
+  }
+  .section-1-index__text {
+    font-size: 5vw;
+    font-weight: 600;
+    color: rgb(55, 106, 109);
+  }
+  .section-1-index__article-1--figure {
+    width: 30%;
+    justify-content: center;
+  }
+  .section-1-index__article-1--figure:hover {
+    box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.25);
+  }
+  .section-1-index__article-1--figure:active {
+    transform: scale(1.02);
+  }
+  .section-1-index__article-1--figure--img {
+    width: 70%;
+  }
+  .section-1-index__article-1--figure--figcap {
+    font-size: 25px;
+  }
+  .section-1-index div a {
+    font-size: 20px;
+  }
+  .section-1-index div a:hover {
+    color: rgb(73, 73, 73);
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
