--- a/views/nosotros/nosotros.html
+++ b/views/nosotros/nosotros.html
@@ -86,11 +86,11 @@
                 </ul>
                 <!-- NAV-subpaginas = START -->
                 <div class="nav__text">
-                    <ul class="nav__text__ul m-0 p-0">
-                        <li class="nav__text__ul--subpages-text-only" id="NosotrosItem">
+                    <ul class="nav__text--ul m-0 p-0">
+                        <li class="nav__text--ul--subpages-text-only" id="NosotrosItem">
                             <a href="#Nosotros">Nosotros</a>
                         </li>
-                        <li class="nav__text__ul--subpages-text-only" id="ContactanosItem">
+                        <li class="nav__text--ul--subpages-text-only" id="ContactanosItem">
                             <a href="#footer-nav">Contactanos</a>
                         </li>
                     </ul>
