--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -14,5 +14,7 @@ $paleta:(
     "once":rgba(194, 163, 96),
     "doce": rgba(255, 255, 255),
     "trece": rgba(97, 97, 97),
-    "catorce": rgba(225, 225, 225),
+    "catorce": rgb(220, 220, 220),
+    "quince": rgb(240, 240, 240),
+    "dieciseis": rgb(229, 229, 229),
 );
