--- a/views/productos/productos.html
+++ b/views/productos/productos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../../imagenes/g.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../../css/main.css">
     <title>Productos</title>
 </head>
 <body>
@@ -43,7 +43,8 @@
                 <div class="nav__log nav-item col-sm-12 col-lg-3" id="AccederItem">
                     <a class="nav__log--login" href="#">
                         <button class="nav__log--login--button">
-                            <img class="nav__log--login--button--img1" src="../../imagenes/user2_1.png" alt="logo de usuario">
+                            <img class="nav__log--login--button--img1" src="../../imagenes/profile-icon.png" alt="logo de usuario">
+                            <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario">
                             <span class="nav__log--login--button--span1">Acceder</span>
                         </button>
                     </a>
@@ -85,11 +86,11 @@
                 </ul>
                 <!-- NAV-subpaginas = START -->
                 <div class="nav__text">
-                    <ul class="nav__text__ul m-0 p-0">
-                        <li class="nav__text__ul--subpages-text-only" id="NosotrosItem">
+                    <ul class="nav__text--ul m-0 p-0">
+                        <li class="nav__text--ul--subpages-text-only" id="NosotrosItem">
                             <a href="../nosotros/nosotros.html">Nosotros</a>
                         </li>
-                        <li class="nav__text__ul--subpages-text-only" id="ContactanosItem">
+                        <li class="nav__text--ul--subpages-text-only" id="ContactanosItem">
                             <a href="#footer-nav">Contactanos</a>
                         </li>
                     </ul>
